--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   {% include footer.html %}
 
 <!-- Load Scripts after content -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
 <script src="./assets/js/jquery-2.1.1.min.js"></script>
 <!-- <script src="/assets/js/velocity.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
